--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: 2.0.11
   json_annotation: ^2.0.0
+  animated_text_kit: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -39,7 +40,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/icon-close.png
+    - assets/icon-menu.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
