--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: Syst
+      fonts:
+        - asset: fonts/syst.otf
+  
   assets:
     - assets/icon-close.png
     - assets/icon-menu.png
+    - assets/moon.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
