--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dio: 2.0.11
   json_annotation: ^2.0.0
   fluttertoast: ^3.0.3
+  flutter_html: ^0.9.4
 
 dev_dependencies:
   flutter_test:
